fix(header): added overflow hidden

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,5 +9,21 @@ body {
     width: 100vw;
     color: white;
     position: relative;
+    overflow: hidden;
+
+    .header-pattern-rings {
+      position: absolute;
+      top: 124px;
+      left: -342px;
+      mix-blend-mode: normal;
+      opacity: 0.25;
+    }
+    .header-pattern-circle {
+      position: absolute;
+      top: 254px;
+      right: -65px;
+      mix-blend-mode: normal;
+      opacity: 0.25;
+    }
   }
 }
