--- a/src/sections/header/Header.scss
+++ b/src/sections/header/Header.scss
@@ -1,7 +1,6 @@
 @import "../../tokens/index.scss";
 @import "../../tokens/mixings.scss";
 
-
 .header-container {
   display: flex;
   align-items: center;
@@ -23,20 +22,5 @@
     align-items: center;
     justify-content: space-evenly;
     gap: $spacing-24;
-  }
-
-  .header-pattern-rings {
-    position: absolute;
-    top: 124px;
-    left: -342px;
-    mix-blend-mode: normal;
-    opacity: 0.25;
-  }
-  .header-pattern-circle {
-    position: absolute;
-    top: 254px;
-    right: -65px;
-    mix-blend-mode: normal;
-    opacity: 0.25;
   }
 }
